# PyVoteview

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml
pyvoteview/: __init__.py  _url.py  _utilities.py  _validators.py  core.py
pyvoteview/tests/: test__url.py  test__utilities.py  test__validators.py  test_core.py
scripts/: build.sh  pytest.sh
