[project]
dependencies = [
    "polars==1.33.1",
]
name = "pyvoteview"
description = "PyVoteView package to process VoteView site data."
authors = [
    { name = "Jeremy Kazimer", email = "jeremykazimer@gmail.com" }
]
license = "Apache-2.0"
keywords = []
urls = { source = "https://github.com/k-z-m-r/PyVoteview" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  "jupyter",
  "pytest",
  "coverage",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E","W","F","I",
    "UP","B",
    "SIM","C4",
    "ARG","ARG001",
    "RET","TRY",
    "DTZ",
    "S",
    "ANN",
    "RUF",
]
ignore = [
    "B008",
    "B904",
    "ANN401",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
